--- a/inteligencia_artificial_sistemas_recomendacao_python_v1.ipynb
+++ b/inteligencia_artificial_sistemas_recomendacao_python_v1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMJ7W1uSJSTnJ1bl32F0POc",
+      "authorship_tag": "ABX9TyN6wW5gK4Kcy68J+zbwavFp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -584,7 +584,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Função de similaridade retornará os perfis ordenados mais parecidos com o usuário/filmes esperado. Retornará de acordo com um limite de dados. "
+        "Função de similaridade retornará os perfis ordenados mais parecidos com o usuário/filmes esperado. Retornará de acordo com um limite de dados. \n",
+        "\n",
+        "A similaridade é baseado na distância euclidiana, portanto, tantos os filmes quanto os usuários serão baseados nas notas existentes, que vão dizer quanto um filme á parecido com outro ou quanto um usuário tem notas similares a de outro usuário."
       ]
     },
     {
@@ -606,11 +608,21 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C2f5hwXPrAPQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Nesta execução, apresenta quais usuários são similares a Ana, do qual retornará os 10 primeiros."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "XaDbleNlfucx",
         "colab_type": "code",
-        "outputId": "8df96f5f-99ca-4d47-ae70-a6cc79db4e92",
+        "outputId": "c5996d41-909e-431d-e5ee-1698a263a799",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 116
@@ -619,7 +631,7 @@
       "source": [
         "get_similares(avaliacoes_usuario, 'Ana', 10)"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +648,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 10
         }
       ]
     },
@@ -797,7 +809,7 @@
       "metadata": {
         "id": "xTuo8D_8rdAy",
         "colab_type": "code",
-        "outputId": "120a9e75-1486-44d7-ebc3-4b6820934beb",
+        "outputId": "614eee11-f550-4145-8d04-74cebcfb59cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 66
@@ -806,7 +818,7 @@
       "source": [
         "get_recomendacoes(avaliacoes_usuario, 'Leonardo', 10)"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +832,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 73
+          "execution_count": 6
         }
       ]
     },
@@ -868,7 +880,7 @@
       "source": [
         "get_recomendacoes(avaliacoes_usuario, 'Claudia', 10)"
       ],
-      "execution_count": 202,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1035,7 +1047,7 @@
       "metadata": {
         "id": "_Cz8Y1tXwF7b",
         "colab_type": "code",
-        "outputId": "9b0d9e34-f86b-46f4-b8c7-17e5c27ffdd2",
+        "outputId": "18303f46-e90b-450d-fb1c-0afd1be64fd0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 100
@@ -1044,7 +1056,7 @@
       "source": [
         "get_similares(avaliacoes_filmes, 'Star Wars', 10)"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1060,7 +1072,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 11
         }
       ]
     },
@@ -1112,7 +1124,7 @@
       "source": [
         "get_recomendacoes(avaliacoes_filmes, 'Star Wars', 10)"
       ],
-      "execution_count": 204,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1162,6 +1174,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6434N61osO9J",
+        "colab_type": "text"
+      },
+      "source": [
+        "A partir daqui, vamos usar um outro dataset da MovieLens onde contêm milhares de filme e notas de usuários."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LHWYxiUvsZwi",
+        "colab_type": "text"
+      },
+      "source": [
+        "Esta função tem como meta a leitura dos filmes e notas para juntá-los em um único objeto para montar as similaridades e recomendações de filmes, muito parecido com o que foi proposto acima."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "18485H3ZB0pe",
@@ -1189,6 +1221,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dkpJZXnKs3AX",
+        "colab_type": "text"
+      },
+      "source": [
+        "Carregamento dos datasets."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ak1kWlAPF3Dj",
@@ -1204,6 +1246,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4NozKWFOs5ze",
+        "colab_type": "text"
+      },
+      "source": [
+        "Alteração dos nomes das colunas."
+      ]
     },
     {
       "cell_type": "code",
@@ -1420,6 +1472,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "56HxsYmFtFnc",
+        "colab_type": "text"
+      },
+      "source": [
+        "Aqui fará a junção das duas bases, do qual será possível encontrar os filmes e notas de um determinado usuário."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "i-96ETLJc9AI",
@@ -1433,11 +1495,21 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N4NL8FnEtO7H",
+        "colab_type": "text"
+      },
+      "source": [
+        "Filmes e notas do usuário 1."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "vPioOMIFi6L1",
         "colab_type": "code",
-        "outputId": "4bb52381-e711-4a68-c241-82cbc2367a06",
+        "outputId": "a396765f-b40c-4b2f-b8f5-1a24262a58b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 900
@@ -1446,7 +1518,7 @@
       "source": [
         "base_movies_ratings['1']"
       ],
-      "execution_count": 217,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1510,7 +1582,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 217
+          "execution_count": 17
         }
       ]
     },
@@ -1521,7 +1593,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Resultado de 10 usuários similares com o usuário 212."
+        "Resultado de 10 usuários similares com o usuário 212. Os percentuais 1.0 significa que são 100% similares ao usuário 212."
       ]
     },
     {
@@ -1538,7 +1610,7 @@
       "source": [
         "get_similares(base_movies_ratings, '212', 10)"
       ],
-      "execution_count": 221,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1578,7 +1650,7 @@
       "metadata": {
         "id": "2WxqJrAYWAmA",
         "colab_type": "code",
-        "outputId": "00aca82b-5c6e-4b00-c5ae-64d5bbfd1bbf",
+        "outputId": "4f94ea26-706b-4ea2-8a8b-b07022d62f47",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 183
@@ -1587,7 +1659,7 @@
       "source": [
         "get_similares(base_movies_ratings, '1', 10)"
       ],
-      "execution_count": 219,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1608,8 +1680,18 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 219
+          "execution_count": 18
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q-FqK-jOtvQC",
+        "colab_type": "text"
+      },
+      "source": [
+        "Neste caso, são os filmes mais recomendados ao usuário 212."
       ]
     },
     {
@@ -1626,7 +1708,7 @@
       "source": [
         "get_recomendacoes(base_movies_ratings, '212', 10)"
       ],
-      "execution_count": 220,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1656,16 +1738,16 @@
       "metadata": {
         "id": "va6-VDIpn3eU",
         "colab_type": "code",
+        "outputId": "c285bb72-9e44-4be7-9d82-bdba44a566fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 183
-        },
-        "outputId": "c285bb72-9e44-4be7-9d82-bdba44a566fc"
+        }
       },
       "source": [
         "get_recomendacoes(base_movies_ratings, '961', 10)"
       ],
-      "execution_count": 222,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1691,20 +1773,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6PL6rLcot2Bx",
+        "colab_type": "text"
+      },
+      "source": [
+        "Os filmes recomendados para o 212 são muito similares aos filmes para o usuário 1."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "2-jd-GqrmKJG",
         "colab_type": "code",
+        "outputId": "9ac6928c-ccee-467e-a085-27ed777248c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 183
-        },
-        "outputId": "e38ff767-19a6-4cbe-bfe7-85be1603173e"
+        }
       },
       "source": [
         "get_recomendacoes(base_movies_ratings, '1', 10)"
       ],
-      "execution_count": 223,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1725,9 +1817,169 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 223
+          "execution_count": 19
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8bIL61-lvDWF",
+        "colab_type": "text"
+      },
+      "source": [
+        "Existe um problema de similaridades quando a base de dados é muito grande, prejudicando no resultado final na recomendação dos filmes. Isto é, usuários distintos podem ter os mesmos tipos de filmes, não necessariamente similares entre eles. \n",
+        "\n",
+        "Portanto, vamos alterar o processo de avaliação e a técnica de similaridade e recomendação dos filmes por filtragem de itens."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "73GwxscTwIp2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 100
+        },
+        "outputId": "a53ba9a9-dd05-4979-918b-fa8aaf784631"
+      },
+      "source": [
+        "get_similares(avaliacoes_filmes, 'O Ultimato Bourne', 10)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(0.3761785115301142, 'Exterminador do Futuro'),\n",
+              " (0.3567891723253309, 'Freddy x Jason'),\n",
+              " (0.3266316347104093, 'Star Wars'),\n",
+              " (0.32037724101704074, 'Star Trek'),\n",
+              " (0.1886378647726465, 'Norbit')]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Il2SwC7-wwD0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 100
+        },
+        "outputId": "6d599e88-9bdd-44b9-fd8f-edf38372c779"
+      },
+      "source": [
+        "get_similares(avaliacoes_filmes, 'Exterminador do Futuro', 10)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(0.3761785115301142, 'O Ultimato Bourne'),\n",
+              " (0.27429188517743175, 'Star Wars'),\n",
+              " (0.2402530733520421, 'Freddy x Jason'),\n",
+              " (0.20799159651347807, 'Star Trek'),\n",
+              " (0.18464218557642828, 'Norbit')]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MkDwvyu0xYo-",
+        "colab_type": "text"
+      },
+      "source": [
+        "Vamos pegar a nota de cada filme assistido e multiplicar pelo valor da similaridade do filme não assistido, por fim, o filme não assistido terá uma nova nota (Nota do filme assistido x similaridade do filme não assistido). Após isso: \n",
+        "* Somar o valor da similaridade de filmes não assisitidos.\n",
+        "* Somar o valor da nova nota dos filmes não assisitidos após a multiplicação.\n",
+        "\n",
+        "Depois divida o valor da nova nota dos filmes não assistidos pela soma dos valores da similaridade dos filmes não assistidos. \n",
+        "\n",
+        "**Com este resultado acima, será a nota prevista do usuário dar ao filme não assistido.**\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DcSsUTgP0ysI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Neste dado o Leonardo não assistiu aos filmes *Freddy x Jason*, *Star Trek* e *Star Wars*. Por isso a abordagem **Filtragem Por Item** torna-se mais eficiente para prever notas e recomendar filmes."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uAkkbMJ_zuGo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        },
+        "outputId": "12513e58-89cd-4216-e9fc-cf998099cdf0"
+      },
+      "source": [
+        "avaliacoes_usuario['Leonardo']"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Exterminador do Futuro': 4.0, 'Norbit': 1.0, 'O Ultimato Bourne': 4.5}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fhuvGgU61tO3",
+        "colab_type": "text"
+      },
+      "source": [
+        "Filtragem por item - item por similaridades."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cn_A2wXA1yyg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "get_similares(avaliacoes_filmes, 'Star Trek', 10)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
