finalização do curso

--- a/inteligencia_artificial_sistemas_recomendacao_python_v1.ipynb
+++ b/inteligencia_artificial_sistemas_recomendacao_python_v1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN6wW5gK4Kcy68J+zbwavFp",
+      "authorship_tag": "ABX9TyPH74SiPXiX01UvYx27qvrn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1904,23 +1904,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MkDwvyu0xYo-",
-        "colab_type": "text"
-      },
-      "source": [
-        "Vamos pegar a nota de cada filme assistido e multiplicar pelo valor da similaridade do filme não assistido, por fim, o filme não assistido terá uma nova nota (Nota do filme assistido x similaridade do filme não assistido). Após isso: \n",
-        "* Somar o valor da similaridade de filmes não assisitidos.\n",
-        "* Somar o valor da nova nota dos filmes não assisitidos após a multiplicação.\n",
-        "\n",
-        "Depois divida o valor da nova nota dos filmes não assistidos pela soma dos valores da similaridade dos filmes não assistidos. \n",
-        "\n",
-        "**Com este resultado acima, será a nota prevista do usuário dar ao filme não assistido.**\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "DcSsUTgP0ysI",
         "colab_type": "text"
       },
@@ -1973,13 +1956,333 @@
       "metadata": {
         "id": "cn_A2wXA1yyg",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 100
+        },
+        "outputId": "912511ba-2495-4e61-eb57-5bd8a13531f3"
       },
       "source": [
         "get_similares(avaliacoes_filmes, 'Star Trek', 10)"
       ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(0.3761785115301142, 'Norbit'),\n",
+              " (0.3483314773547883, 'Freddy x Jason'),\n",
+              " (0.32037724101704074, 'O Ultimato Bourne'),\n",
+              " (0.2708131845707603, 'Star Wars'),\n",
+              " (0.20799159651347807, 'Exterminador do Futuro')]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mcdmkb4g4Oa4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def calcular_itens_similares(base, limite):\n",
+        "  resultado = {};\n",
+        "  for item in base:\n",
+        "    notas = get_similares(base, item, limite);\n",
+        "    resultado[item] = notas;\n",
+        "  return resultado;"
+      ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zgDqpmli44HI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "itens_similares = calcular_itens_similares(avaliacoes_filmes, 100)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OeLgpzEH5EVm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 516
+        },
+        "outputId": "7e7e620d-db63-4a58-db3b-4298334890f9"
+      },
+      "source": [
+        "itens_similares"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Exterminador do Futuro': [(0.3761785115301142, 'O Ultimato Bourne'),\n",
+              "  (0.27429188517743175, 'Star Wars'),\n",
+              "  (0.2402530733520421, 'Freddy x Jason'),\n",
+              "  (0.20799159651347807, 'Star Trek'),\n",
+              "  (0.18464218557642828, 'Norbit')],\n",
+              " 'Freddy x Jason': [(0.4721359549995794, 'Norbit'),\n",
+              "  (0.3761785115301142, 'Star Wars'),\n",
+              "  (0.3567891723253309, 'O Ultimato Bourne'),\n",
+              "  (0.3483314773547883, 'Star Trek'),\n",
+              "  (0.2402530733520421, 'Exterminador do Futuro')],\n",
+              " 'Norbit': [(0.4721359549995794, 'Freddy x Jason'),\n",
+              "  (0.3761785115301142, 'Star Trek'),\n",
+              "  (0.29429805508554946, 'Star Wars'),\n",
+              "  (0.1886378647726465, 'O Ultimato Bourne'),\n",
+              "  (0.18464218557642828, 'Exterminador do Futuro')],\n",
+              " 'O Ultimato Bourne': [(0.3761785115301142, 'Exterminador do Futuro'),\n",
+              "  (0.3567891723253309, 'Freddy x Jason'),\n",
+              "  (0.3266316347104093, 'Star Wars'),\n",
+              "  (0.32037724101704074, 'Star Trek'),\n",
+              "  (0.1886378647726465, 'Norbit')],\n",
+              " 'Star Trek': [(0.3761785115301142, 'Norbit'),\n",
+              "  (0.3483314773547883, 'Freddy x Jason'),\n",
+              "  (0.32037724101704074, 'O Ultimato Bourne'),\n",
+              "  (0.2708131845707603, 'Star Wars'),\n",
+              "  (0.20799159651347807, 'Exterminador do Futuro')],\n",
+              " 'Star Wars': [(0.3761785115301142, 'Freddy x Jason'),\n",
+              "  (0.3266316347104093, 'O Ultimato Bourne'),\n",
+              "  (0.29429805508554946, 'Norbit'),\n",
+              "  (0.27429188517743175, 'Exterminador do Futuro'),\n",
+              "  (0.2708131845707603, 'Star Trek')]}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bHPypeqkCKcF",
+        "colab_type": "text"
+      },
+      "source": [
+        "Vamos pegar a nota de cada filme assistido e multiplicar pelo valor da similaridade do filme não assistido, por fim, o filme não assistido terá uma nova nota (Nota do filme assistido x similaridade do filme não assistido). Após isso: \n",
+        "* Somar o valor da similaridade de filmes não assisitidos.\n",
+        "* Somar o valor da nova nota dos filmes não assisitidos após a multiplicação.\n",
+        "\n",
+        "Depois divida o valor da nova nota dos filmes não assistidos pela soma dos valores da similaridade dos filmes não assistidos. \n",
+        "\n",
+        "**Com este resultado acima, será a nota prevista do usuário dar ao filme não assistido.**\n",
+        "\n",
+        "A função **get_recomendacoes_itens** implementa esta regra."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "da9Rcwif8yVK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def get_recomendacoes_itens(base, similaridades_itens, usuario, limite):\n",
+        "  notas_usuario = base[usuario];\n",
+        "  notas = {};\n",
+        "  totais_similaridade = {};\n",
+        "\n",
+        "  for (item, nota) in notas_usuario.items():\n",
+        "    for (similaridade, outro_item) in similaridades_itens[item]:\n",
+        "      if outro_item in notas_usuario:\n",
+        "        continue;\n",
+        "      notas.setdefault(outro_item, 0);\n",
+        "      notas[outro_item] += similaridade * nota;\n",
+        "      totais_similaridade.setdefault(outro_item, 0);\n",
+        "      totais_similaridade[outro_item] += similaridade;\n",
+        "\n",
+        "  rankings = [(score / totais_similaridade[item], item) \n",
+        "            for item, score in notas.items()];\n",
+        "  \n",
+        "  rankings.sort();\n",
+        "  rankings.reverse();\n",
+        "  return rankings; "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ajy1yEeKC-Z4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 66
+        },
+        "outputId": "4dff738a-de39-43c7-c550-ba15677e8d5b"
+      },
+      "source": [
+        "get_recomendacoes(avaliacoes_usuario, 'Leonardo', 10)"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(3.457128694491423, 'Star Wars'),\n",
+              " (2.778584003814924, 'Freddy x Jason'),\n",
+              " (2.422482042361917, 'Star Trek')]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j76zF00yDJY7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "lista_similaridade = calcular_itens_similares(avaliacoes_filmes, 10)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cvr3LobqDwp1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 516
+        },
+        "outputId": "3e41c177-ffb5-4775-e8f3-728245c0539e"
+      },
+      "source": [
+        "lista_similaridade"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Exterminador do Futuro': [(0.3761785115301142, 'O Ultimato Bourne'),\n",
+              "  (0.27429188517743175, 'Star Wars'),\n",
+              "  (0.2402530733520421, 'Freddy x Jason'),\n",
+              "  (0.20799159651347807, 'Star Trek'),\n",
+              "  (0.18464218557642828, 'Norbit')],\n",
+              " 'Freddy x Jason': [(0.4721359549995794, 'Norbit'),\n",
+              "  (0.3761785115301142, 'Star Wars'),\n",
+              "  (0.3567891723253309, 'O Ultimato Bourne'),\n",
+              "  (0.3483314773547883, 'Star Trek'),\n",
+              "  (0.2402530733520421, 'Exterminador do Futuro')],\n",
+              " 'Norbit': [(0.4721359549995794, 'Freddy x Jason'),\n",
+              "  (0.3761785115301142, 'Star Trek'),\n",
+              "  (0.29429805508554946, 'Star Wars'),\n",
+              "  (0.1886378647726465, 'O Ultimato Bourne'),\n",
+              "  (0.18464218557642828, 'Exterminador do Futuro')],\n",
+              " 'O Ultimato Bourne': [(0.3761785115301142, 'Exterminador do Futuro'),\n",
+              "  (0.3567891723253309, 'Freddy x Jason'),\n",
+              "  (0.3266316347104093, 'Star Wars'),\n",
+              "  (0.32037724101704074, 'Star Trek'),\n",
+              "  (0.1886378647726465, 'Norbit')],\n",
+              " 'Star Trek': [(0.3761785115301142, 'Norbit'),\n",
+              "  (0.3483314773547883, 'Freddy x Jason'),\n",
+              "  (0.32037724101704074, 'O Ultimato Bourne'),\n",
+              "  (0.2708131845707603, 'Star Wars'),\n",
+              "  (0.20799159651347807, 'Exterminador do Futuro')],\n",
+              " 'Star Wars': [(0.3761785115301142, 'Freddy x Jason'),\n",
+              "  (0.3266316347104093, 'O Ultimato Bourne'),\n",
+              "  (0.29429805508554946, 'Norbit'),\n",
+              "  (0.27429188517743175, 'Exterminador do Futuro'),\n",
+              "  (0.2708131845707603, 'Star Trek')]}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V1yNbHE6DwHe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "recomendacoes = get_recomendacoes_itens(avaliacoes_usuario, lista_similaridade, 'Leonardo', 20);"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KH82p4VGHBi9",
+        "colab_type": "text"
+      },
+      "source": [
+        "Recomendações por filtragem baseada em itens."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kM_B0ZvFE2DF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 66
+        },
+        "outputId": "ea30aabf-602e-4e9e-aec9-c4740d37b96c"
+      },
+      "source": [
+        "recomendacoes"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(3.1962008423190285, 'Star Wars'),\n",
+              " (2.929467965289551, 'Star Trek'),\n",
+              " (2.8420889258196413, 'Freddy x Jason')]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
     }
   ]
 }
